# tui-contacts

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  Makefile  README.md  cmake_install.cmake  ftxui-starter  github-key  github-key.pub  main2.cpp  mainbackup.cpp  notes.json
src/: main.cpp
